--- a/apps/react-test-shop/src/index.html
+++ b/apps/react-test-shop/src/index.html
@@ -2,11 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>ReactTestShop</title>
+    <title>React Test Shop</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+
+    <!-- Add Inter font -->
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+
+    <!-- Add environment variables -->
+    <script src="./env.js"></script>
   </head>
   <body>
     <div id="root"></div>
